# online_bookstore_final_assessment_Baffoe_L_K_2416509

./: .gitignore  ALL_FIXES_COMPLETE.md  ASSIGNMENT_COMPLETION_REPORT.md  BUG_FIXES_SUMMARY.md  CICD_ARCHITECTURE.md  CICD_SETUP_GUIDE.md  CI_CD_DOCUMENTATION.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_TESTING_REPORT.md  CRITICAL_EVALUATION_REPORT.md  CRITICAL_FIX_SUMMARY.md  DOCKERHUB_SETUP.md  DOCKER_BUILD_VERIFICATION.md  DOCKER_SECRETS_SETUP.md  Dockerfile  EDGE_CASE_TESTING_REPORT.md  INSTRUCTOR_BUGS_LIST.md  LOCAL_CI_TESTING.md  MASTER_INDEX.md  PERFORMANCE_RESULTS_SUMMARY.md  PROJECT_SHOWCASE.md  PROJECT_SUMMARY.md  README.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  TESTING_AND_CICD_GUIDE.md  TEST_SUITE_SUMMARY.md  ULTRA_OPTIMIZED_TEST_SUITE_SUMMARY.md  VERIFICATION_REPORT.md  WORKFLOW_STEPS_EXPLANATION.md  app.py  app_optimized.py  app_refactored.py  ci-report.json  config.py  docker-compose.yml  generate_report_screenshots.py  generate_screenshots.py  models.py  models_optimized.py  (+20 more)
.github/workflows/: 1-tests.yml  2-coverage.yml  3-performance.yml  4-code-quality.yml  5-security.yml  6-deploy.yml  cd.yml  ci-cd.yml  ci-pipeline.yml  ci-simple.yml  ci.yml  code-quality.yml  continuous-deployment.yml  continuous-integration.yml  dependencies.yml  deploy.yml  notify.yml  release.yml  security.yml  test-minimal.yml  test.yml  (+1 more)
static/: styles.css
templates/: account.html  cart.html  checkout.html  index.html  login.html  order_confirmation.html  register.html
tests/: README.md  __init__.py  conftest.py  test_app.py  test_config.py  test_models.py  test_services.py
