[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "online-bookstore"
version = "1.0.0"
description = "Online Bookstore Flask Application with Comprehensive Testing"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
py-modules = ["app_refactored", "models_refactored", "services", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tests*"]
exclude = ["static*", "templates*", "*.egg-info", "build*", "dist*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
